--- a/Lab1/readme
+++ b/Lab1/readme
@@ -46,4 +46,6 @@ In order to complete this, once need:
 
 
 ### Tips
-- 
+- Dirbursting is your friend (administrator forgot a route to test its network)
+- Injection
+- Where is data stored?
